--- a/Competition.Rmd
+++ b/Competition.Rmd
@@ -9,7 +9,7 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r echo=FALSE}
+```{r echo=FALSE, message=FALSE, warning=FALSE}
 #Bring in Libraries
 library(readr)
 library(readxl)
@@ -19,26 +19,22 @@ library(corrplot)
 ```
 
 
-```{r}
+```{r echo=FALSE, message=FALSE, warning=FALSE}
 #load data
 training <- read.csv("competition-data.csv") 
 test_preds <- read.csv("competition-test-x-values.csv") 
 ```
 
-```{r}
+```{r echo=FALSE, message=FALSE, warning=FALSE}
 #cleaning and pred selection
 zero_check <- training %>% summarise(across(everything(), ~ sum(. == 0)))
 #Predictors which have over 1,000 0's are being automatically removed. We can't assess the signifigance of individual columns, so this is the best route to retain predictors which have unique values
 training <- training %>% select(X2:X10, X17:outcome, - X8)
 ```
 
-```{r}
-## Looking to remove highly correlated predictors.
 
-
-```
-```{r}
-## Removing X4, X5, X6, X17 
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+## Removing X4, X5, X6, X17 for highly correlated, X7 for low var
 training <- training %>% select(- (X4:X6),- X17)
 correlation_matrix <- cor(training)
 pairs(training)
@@ -49,19 +45,34 @@ y <- training$outcome
 ```
 
 
-```{r}
-#KNN
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+#KNN NO LONGER NEEDED, NOT SELECTED IN END
 ctrl <- trainControl(method = "cv", number = 10)
 knnFit1 <- train(
   x = x,
   y = y,
-  preProcess = c("center", "scale"),
+  preProcess = c("center", "scale","BoxCox"),
   method = "knn",
   trControl = ctrl,
   tuneLength = 15)
-## Linear DELETED, NOT NECESSARY WITH HIGH RMSE
-ctrl = trainControl(method="cv", number = 10)
 ```
 
 
+
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+# THIS IS THE SELECTED MODEL
+rfFit <- train( x = x,
+                y = y,
+                preProcess = c("center", "scale", "BoxCox"),
+                method="rf", 
+                trControl=ctrl
+          )
+
+```
+
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+rf_predictions <- predict(rfFit, newdata = test_preds)
+write.csv(rf_predictions, file = "predictions.csv", row.names = FALSE)
+
+```
 
